syntax = "proto3";

message MinMaxParams {
  repeated float value = 1;
}

message MinMaxReply {
  float min = 1;
  float max = 2;
}

service MinMax {
  rpc MinMaxCalc (MinMaxParams) returns (MinMaxReply) {}
}
